stub: Add @InlineMe to deprecated gRPC APIs (#8457)
Read more @ https://errorprone.info/docs/inlineme

--- a/stub/build.gradle
+++ b/stub/build.gradle
@@ -10,6 +10,7 @@ description = "gRPC: Stub"
 dependencies {
     api project(':grpc-api'),
         libraries.guava
+    implementation libraries.errorprone
     testImplementation libraries.truth,
             project(':grpc-testing')
     signature "org.codehaus.mojo.signature:java17:1.0@signature"
